changes: backgrounds color fixed dark mode

--- a/css/_cart.css
+++ b/css/_cart.css
@@ -4,7 +4,6 @@
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    background-color: var(--container-color);
 }
 
 .cart-card {
